# DR-Using-SCV-OD

./: CMakeLists.txt  README.md  中文稿_v1.docx
config/: parkinglot.yaml  semantickitti.yaml
doc/: Reference_v3.docx  note.txt  tmp.docx  小论文_v1.docx  小论文_v1qk.docx  小论文_v2.docx
doc/fig2/: 509_g.pcd  509_seg.pcd  509_semantickitti.pcd
include/: patchwork.h  session.h  ssc.h  tictoc.h  utility.h
launch/: run_evaluate.launch  run_parkinglot.launch  run_semantickitti.launch
src/: colorBin.cpp  erasor_dynamic.cpp  evaluate.cpp  gicp.cpp  main.cpp  makeScan.cpp  plotObject.cpp  plotStatic.cpp  ssc.cpp  test.cpp
tool/: car.py  feature.py  pcd2bin.py  plotIoU.py  plotPD.py  plotPR.py  plotStatic.py  readIntensity.py  time.py  use.txt  viewer.py
